--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false"><span class="mbri-bookmark mbr-iconfont mbr-iconfont-btn"></span>INTRODUCTION</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true">APPLICATIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="photoshop gallery" aria-expanded="false">Adobe Photoshop</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Office Suite</a><div class="dropdown-menu dropdown-submenu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="word" data-toggle="dropdown-submenu" aria-expanded="false">Word</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="https://susanalugones.github.io/documents/discussittopic6.pdf">DisscusIT</a></div></div><a class="dropdown-item" href="powerpoint">PowerPoint</a></div></div><a class="dropdown-item" href="adobe auditio">Adobe Audition</a><a class="dropdown-item" href="adobe premire">Adobe Premire</a><a class="dropdown-item" href="illustrator">Adobe Illustrator</a><a class="dropdown-item" href="123d">123D</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">CREDENTIALS</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Adobe PS</a><a class="dropdown-item" href="#">Adobe Audition</a><a class="dropdown-item" href="#">Adobe Premiere</a><a class="dropdown-item" href="#">Adobe Illustrator</a><a class="dropdown-item" href="#">IC3<br></a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">REFERENCES</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Mr.Pate</a><a class="dropdown-item" href="#"></a><a class="dropdown-item" href="#">Haayen Carolina<br></a><a class="dropdown-item" href="#">Javier Martinez</a><a class="dropdown-item" href="#">Javier Lopez</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="page8.html">Contact</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">INTRODUCTION</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true">APPLICATIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="photoshop gallery" aria-expanded="false">Adobe Photoshop</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Office Suite</a><div class="dropdown-menu dropdown-submenu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="word" data-toggle="dropdown-submenu" aria-expanded="false">Word</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="https://susanalugones.github.io/documents/discussittopic6.pdf">DisscusIT</a></div></div><a class="dropdown-item" href="powerpoint">PowerPoint</a></div></div><a class="dropdown-item" href="adobe auditio">Adobe Audition</a><a class="dropdown-item" href="adobe premire">Adobe Premire</a><a class="dropdown-item" href="illustrator">Adobe Illustrator</a><a class="dropdown-item" href="123d">123D</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">CREDENTIALS</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Adobe PS</a><a class="dropdown-item" href="#">Adobe Audition</a><a class="dropdown-item" href="#">Adobe Premiere</a><a class="dropdown-item" href="#">Adobe Illustrator</a><a class="dropdown-item" href="#">IC3<br></a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">REFERENCES</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Mr.Pate</a><a class="dropdown-item" href="#"></a><a class="dropdown-item" href="#">Haayen Carolina<br></a><a class="dropdown-item" href="#">Javier Martinez</a><a class="dropdown-item" href="#">Javier Lopez</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="page8.html">Contact</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
 
     <div class="container">
         <div class="row">
@@ -179,17 +179,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2p" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><blockquote>"Successful people maintain a positive focus in life no matter what is going on around them. They stay focused on their past successes rather than their past failures, and on the next action steps they need to take to get them closer to the fulfillment of their goals rather than all the other distractions that life presents to them."- Jack Canfield</blockquote><p>&nbsp;</p></div>
-        </div>
-    </div>
-
-</section>
-
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-2u" style="background-color: rgb(0, 0, 0); padding-top: 120px; padding-bottom: 30px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-2u" style="background-color: rgb(0, 0, 0); padding-top: 30px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
