--- a/continuation.html
+++ b/continuation.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header4-3j" style="background-image: url(assets/images/black-and-white-rose-1280x1024-2000x1600.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header4-3j" style="background-image: url(assets/images/black-and-white-rose-1280x1024-2000x1600.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -105,8 +105,8 @@ Phone: (786)-397-1094<br><br></p>
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-3g" style="background-color: rgb(0, 0, 0); padding-top: 1.75rem; padding-bottom: 1.75rem;">
-    
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-3g" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);"></div>
     <div class="container">
         <p class="text-xs-center">Copyright (c) 2016 Mobirise.</p>
     </div>
