--- a/photoshop.html
+++ b/photoshop.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section mbr-section-md-padding mbr-footer footer1 mbr-after-navbar" id="contacts1-19" style="background-color: rgb(0, 0, 0); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section mbr-section-md-padding mbr-footer footer1 mbr-after-navbar" id="contacts1-19" style="background-color: rgb(0, 0, 0); padding-top: 60px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
@@ -83,8 +83,8 @@ Phone: (786)-397-1094<br><br></p>
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1a" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
-    
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-1a" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);"></div>
     <div class="container">
         <p class="text-xs-center">Copyright (c) 2016 Mobirise.</p>
     </div>
@@ -98,6 +98,7 @@ Phone: (786)-397-1094<br><br></p>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchSwipe/jquery.touchSwipe.min.js"></script>
   <script src="assets/viewportChecker/jquery.viewportchecker.js"></script>
+  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
