--- a/photoshopgallery.html
+++ b/photoshopgallery.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-3m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 3rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-3m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 3rem;">
     <!-- Filter -->
     
 
@@ -197,7 +197,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="JYaeSwFQaVt9nTnyJErlYUXKziBlyxXnUzH5AmA/8vf/hQ34sIeW1ZeRYX9fXkzI87VNaIk25DTh46u9OaMRfM2CfTZeKXv7y438LES846xVR7IbzB/rpDUKirijR1RM" data-form-email="true">
+                    <input type="hidden" value="V9JbNd7JK+cazbFGTDyzurz9DtoxhpA3SyVMYkqAtp+jnynBxRWfKSnQYW8NjlHu5xSKpTDSNHpi8hg4/suHcxyOSa43xZJvrdQ7kwpLpLUMPzoeqKeuhVH9RRwjzKsQ" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
